# HiveMind

./: .gitignore  README.en.md  README.md  README.zh-CN.md  download_model.sh  inference.py  logger.py  pyproject.toml  quick_test.py  test_swarm.py  train.py  train_v2.py
archive/output/lora-adapter/checkpoint-6/: adapter_config.json  scheduler.pt
data/: train.txt  train_large.txt
data/stage2/: code_sample.txt  knowledge_sample.txt  math_sample.txt  writing_sample.txt
docs/: 2025-03-04-swarm-experts-design.md  2026-03-05-roadmap-to-claude-level.md  MODEL_CAPABILITY.md  MODEL_GUIDE.md  model-comparison.md
inference/: compare_lora.py
output/lora-adapter/checkpoint-6/: README.md  trainer_state.json
scripts/: data_crawler.py  generate_sample_data.py  main.py  monitor.sh  train.bat  train.ps1  train.sh  train_qwen_full.py  train_qwen_stage1.py  train_qwen_stage2.py  train_qwen_stage3.py  train_qwen_stage4.py  train_stage1.py  train_stage2.py  train_stage3.py  train_stage4.py  verify_env.py
swarm/: __init__.py  experts.py  router.py  swarm_model.py
tests/: test_lora.py  test_swarm.py
training/lora/: train.py  train_v2.py
