[project]
name = "hivemind"
version = "0.1.0"
description = "Swarm Intelligence Expert System based on Qwen3.5-4B"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.6.1",
    "peft>=0.18.1",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "rich>=13.0.0",
]
